--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-sass": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
+    "gatsby-plugin-typography": "^3.2.0",
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.32.8"
+    "react-typography": "^0.16.19",
+    "sass": "^1.32.8",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "dart-sass": "^1.25.0",
